validar solo texto en el campo de Nombre

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <form class="form" method="get">
-        <label for="name" class="form__label label">
-            <span class="label__name">Nombre</span>
-            <input class="label__input" type="text" name="name" id="name" placeholder="Tu nombre" required>
+        <label for="inputName" class="form__label label">
+            <span class="label__name" id="labelName">Nombre</span>
+            <input class="label__input" type="text" name="name" id="inputName" placeholder="Tu nombre" required>
         </label>
 
         <label for="email" class="form__label label">
