cambiar el cursor si los datos son correctos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <input class="label__input" type="text" name="random" id="inputRandom" value="cargando..." readonly>
         </label>
 
-        <button class="form__btn">SEND FEEDBACK</button>
+        <button class="form__btn" id="inputBtn">SEND FEEDBACK</button>
     </form>
 
     <script src="./js/index.js"></script>
