--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <form class="form" method="get">
         <label for="inputName" class="form__label label">
             <span class="label__name" id="labelName">Nombre</span>
-            <input class="label__input" type="text" name="name" id="inputName" placeholder="Tu nombre" required>
+            <input class="label__input" type="text" id="inputName" placeholder="Tu nombre" required>
         </label>
 
         <label for="email" class="form__label label">
             <span class="label__name">Correo</span>
-            <input class="label__input" type="email" name="email" id="email" placeholder="ejemplo@gmail.com" required>
+            <input class="label__input" type="email" id="email" placeholder="ejemplo@gmail.com" required>
         </label>
 
         <label for="inputRandom" class="form__label label">
             <span class="label__name">Numero Random</span>
-            <input class="label__input" type="text" name="random" id="inputRandom" value="cargando..." readonly>
+            <input class="label__input" type="text" id="inputRandom" value="cargando..." readonly>
         </label>
 
         <button class="form__btn" id="inputBtn">SEND FEEDBACK</button>
