--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body class="body">
 
     <form class="form" id="form" method="get">
         <label for="inputName" class="form__label label">
@@ -42,6 +42,12 @@
             </div>
         </div>
     </section>
+
+    <!-- Dark Mode -->
+    <div class="dark-mode" id="darkMode">
+        <img src="./images/moon.png" alt="moon" class="dark__icon" id="iconDarkMode">
+    </div>
+
     <script src="./js/index.js"></script>
 </body>
 
