agregando mas informacion  en la alerta

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <!-- Modol -->
     <section class="modal" id="modal">
         <div class="modal__info info">
-            <h2 class="info__title">Estas seguro de enviar el <br> formulario</h2>
+            <h2 class="info__title">¿Quieres enviar el  formulario?</h2>
+            <p class="info__paragraph">Antes de enviar el formulario revisa si los datos ingresados son correctos.</p>
             <div class="info__buttons">
                 <button class="info__btn" id="btnAccept">Continuar</button>
                 <button class="info__btn" id="btnCancel">Cancelar</button>
